testsuite/poke.pkl/excond-diag-1.pk
/* { dg-do compile } */

var a
  = 2 ?! "foo"; /* { dg-error "wrong type.*\n.*expected Exception" } */
